--- a/Mariage/Views/Mariage/Index.cshtml
+++ b/Mariage/Views/Mariage/Index.cshtml
@@ -2,4 +2,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Bienvenue sur notre site de mariage</h2>
+<div id="slider"><ul>
+                     <li><img src="../../Content/images/penbron.jpg" alt="Pen Bron" /></li>
+                     <li><img src="../../Content/images/guerande.jpg" alt="Guérande" /></li>
+                     <li><img src="../../Content/images/vitre.jpg" alt="Vitré" /></li>
+                 </ul>
+</div>
+<p>Hé oui, modernité et profession de Gab oblige !<br />
+Vous trouverez ici moult informations concernant nos futures épousailles au printemps prochain notamment cartes et itinéraires conseillés pour nous rejoindre, illustrations modernes, liste de présents et notre aire de réception de pigeons e-voyageurs.</p>
+
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#slider").easySlider();
+    });
+</script>
