--- a/Mariage/Views/Mariage/Liste.cshtml
+++ b/Mariage/Views/Mariage/Liste.cshtml
@@ -3,3 +3,6 @@
 }
 
 <h2>Liste</h2>
+<p>Pour ceux qui le souhaitent, un lien vers notre liste de mariage chez 1001 listes sera mis en ligne dès que celle-ci sera terminée.<br />
+Nous vous informons qu’<del>une urne</del> un coffre au trésor sera présent sur les lieux de la soirée.
+</p>
