--- a/Mariage/Views/Shared/_Layout.cshtml
+++ b/Mariage/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-2.6.2.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/easySlider1.7.js")" type="text/javascript"></script>
+    <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")" />
 </head>
 
     <body>
         <header>
             <h1>Perrine et Gabriel</h1>
-            <p id="date-mariage">11 mai 2013</p>
+            <p id="date-mariage">Le 11 mai 2013 à Gwenrann</p>
             @RenderPage("~/Views/Shared/Menu.cshtml")
         </header>
         <div id="content">
