--- a/Mariage/Views/Mariage/Contact.cshtml
+++ b/Mariage/Views/Mariage/Contact.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Mariage.Models.ContactModel
 @{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Contact";
 }
 
 @{ Html.EnableClientValidation(); }
