--- a/Mariage/Views/Mariage/Infos.cshtml
+++ b/Mariage/Views/Mariage/Infos.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Informations";
 }
 
-<h2>title</h2>
+<h2>Informations</h2>
