--- a/Mariage/Views/Shared/_Layout.cshtml
+++ b/Mariage/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         <header>
             <h1>Perrine et Gabriel</h1>
             <p id="date-mariage">Le 11 mai 2013 à Gwenrann</p>
+            @RenderPage("~/Views/Shared/PrivateForm.cshtml")
             @RenderPage("~/Views/Shared/Menu.cshtml")
         </header>
         <div id="content">
