--- a/Mariage/Views/Shared/InviteForm.cshtml
+++ b/Mariage/Views/Shared/InviteForm.cshtml
@@ -1,4 +1,4 @@
-﻿@Html.BeginForm("Invite", "Mariage") {
+﻿@Html.BeginForm("PrivateForm", "Mariage") {
     @Html.Label("password", "Code d'accès invité")
     @Html.Password("password")
     <input type="submit" value="Envoyer" />
