--- a/Mariage/Views/Mariage/Contact.cshtml
+++ b/Mariage/Views/Mariage/Contact.cshtml
@@ -2,13 +2,14 @@
 @{
     ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Contact";
 }
-
+<p>@Model.ConfirmMessage</p>
 @{ Html.EnableClientValidation(); }
-@using(Html.BeginForm()) {
+@using (Html.BeginForm("Contact", "Mariage", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
     <h2>Nous contacter</h2>
-    @Html.ValidationSummary(true)
-    <div class="editor-label">@Html.LabelFor(m => m.Email)</div>
-    <div class="editor-field">@Html.EditorFor(m => m.Email)</div>
+    @Html.ValidationSummary(false)
+    <div class="editor-label">@Html.LabelFor(m =>m.Email)</div>
+    <div class="editor-field">@Html.EditorFor(m =>m.Email)</div>
     <div class="editor-label">@Html.LabelFor(m => m.Sujet)</div>
     <div class="editor-field">@Html.EditorFor(m => m.Sujet)</div>
     <div class="editor-label">@Html.LabelFor(m => m.Files)</div>
