--- a/Mariage/Views/Mariage/Liste.cshtml
+++ b/Mariage/Views/Mariage/Liste.cshtml
@@ -1,8 +1,9 @@
-﻿@{
-    ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Liste";
+﻿@model Mariage.Models.BaseModel
+@{
+    ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Liste de mariage";
 }
 
 <h2>Liste</h2>
-<p>Pour ceux qui le souhaitent, un lien vers notre liste de mariage chez 1001 listes sera mis en ligne dès que celle-ci sera terminée.<br />
+<p>Pour ceux qui le souhaitent, nous avons ouvert <a href="http://www.1001listes.fr/moncompte/vueinvites/numLst/562017/pageName/presentation/">notre liste de mariage chez 1001 listes.</a><br />
 Nous vous informons qu’<del>une urne</del> un coffre au trésor sera présent sur les lieux de la soirée.
 </p>
