--- a/Mariage/Views/Mariage/404.cshtml
+++ b/Mariage/Views/Mariage/404.cshtml
@@ -7,7 +7,7 @@
 
 <p>Cette page n'existe pas, vous avez soit fait une erreur dans votre URL, soit le développeur de ce site est un boulet.</p>
 
-<ul>
+<ul id="not-found-list">
     <li>@Html.RouteLink("Je reviens à l'accueil du site.", "Accueil")</li>
-    <li>@Html.RouteLink("Ce site est tout pourri, je retourne regarder des vidéos de Lolcats sur Youtube.", "Lolcat")</li>
+    <li><a href="http://www.youtube.com/results?search_query=lolcat&oq=lolcat">Ce site est tout pourri, je retourne regarder des vidéos de Lolcats sur Youtube.</a></li>
 </ul>
