--- a/Mariage/Views/Mariage/Infos.cshtml
+++ b/Mariage/Views/Mariage/Infos.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Mariage.Models
-@model Mariage.Models.BaseModel
+@model BaseModel
 @{
     ViewBag.Title = "Perrine et Gabriel - 11 Mai 2013 - Informations";
 }
@@ -15,21 +15,19 @@
 </p>
 <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
     src="https://maps.google.fr/maps?hl=fr&amp;safe=off&amp;client=firefox-a&amp;q=H%C3%B4tel+de+Ville+Saint-S%C3%A9bastien-sur-Loire&amp;ie=UTF8&amp;hq=H%C3%B4tel+de+Ville&amp;hnear=Saint-S%C3%A9bastien-sur-Loire,+Loire-Atlantique,+Pays+de+la+Loire&amp;t=m&amp;fll=47.205546,-1.498647&amp;fspn=0.012114,0.033023&amp;st=103338374097488094454&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=47.206107,-1.502466&amp;spn=0.012114,0.033023&amp;z=14&amp;iwloc=A&amp;cid=5411520102145252411&amp;output=embed"></iframe>
-<p><a href="https://maps.google.fr/maps?hl=fr&amp;safe=off&amp;client=firefox-a&amp;q=H%C3%B4tel+de+Ville+Saint-S%C3%A9bastien-sur-Loire&amp;ie=UTF8&amp;hq=H%C3%B4tel+de+Ville&amp;hnear=Saint-S%C3%A9bastien-sur-Loire,+Loire-Atlantique,+Pays+de+la+Loire&amp;t=m&amp;fll=47.205546,-1.498647&amp;fspn=0.012114,0.033023&amp;st=103338374097488094454&amp;rq=1&amp;ev=zi&amp;split=1&amp;ll=47.206107,-1.502466&amp;spn=0.012114,0.033023&amp;z=14&amp;iwloc=A&amp;cid=5411520102145252411&amp;source=embed">Agrandir le plan</a></p>
 
 <h4>L'&Eacute;glise</h4>
 <p>La cérémonie religieuse se tiendra en l'église de Saint-Jean l'&Eacute;vangéliste à Saint-Sébastien-sur-Loire, route de Clisson. Elle sera célébrée par le Père Jean-Louis MAURA le 11 Mai 2013 à 14h30.</p>
 <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
     src="https://maps.google.fr/maps?q=Eglise+Saint-Jean+l'%C3%A9vang%C3%A9liste+Saint-S%C3%A9bastien-sur-Loire&amp;oe=utf-8&amp;client=firefox-a&amp;ie=UTF8&amp;hq=Eglise+Saint-Jean+l'%C3%A9vang%C3%A9liste&amp;hnear=Saint-S%C3%A9bastien-sur-Loire,+Loire-Atlantique,+Pays+de+la+Loire&amp;ll=47.192956,-1.524215&amp;spn=0.027324,0.046446&amp;t=m&amp;output=embed"></iframe>
-<p><a href="https://maps.google.fr/maps?q=Eglise+Saint-Jean+l'%C3%A9vang%C3%A9liste+Saint-S%C3%A9bastien-sur-Loire&amp;oe=utf-8&amp;client=firefox-a&amp;ie=UTF8&amp;hq=Eglise+Saint-Jean+l'%C3%A9vang%C3%A9liste&amp;hnear=Saint-S%C3%A9bastien-sur-Loire,+Loire-Atlantique,+Pays+de+la+Loire&amp;ll=47.192956,-1.524215&amp;spn=0.027324,0.046446&amp;t=m&amp;source=embed">Agrandir le plan</a></p>
 
 @if (BaseModel.Private)
 {
     <h3>La fête</h3>
-    <h4>Cocktail, Diner et Bal</h4>
-    
-    <h4>Le lendemain</h4>
-    
+
+    <p>La fête se poursuivra après la célébration religieuse au château de Villeneuve, rond-point de Villeneuve, à Guérande. 
+        Le cocktail commencera à 18 heure et sera suivi d'un dîner placé à 20 heure. Un bal dansant suivra le repas jusqu'au boût de la nuit.</p>
+    <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?oe=utf-8&amp;client=firefox-a&amp;ie=UTF8&amp;q=chateau+de+Villeneuve+Gu%C3%A9rande&amp;fb=1&amp;gl=fr&amp;hq=chateau+de+Villeneuve&amp;hnear=0x48055bf1febe2129:0x9979bf89ad9d5a7a,Gu%C3%A9rande&amp;cid=0,0,15669111881355542604&amp;t=m&amp;iwloc=A&amp;ll=47.319798,-2.412883&amp;spn=0.006295,0.006295&amp;output=embed"></iframe>
 }
 
 
