--- a/Mariage/Views/Mariage/Logements.cshtml
+++ b/Mariage/Views/Mariage/Logements.cshtml
@@ -5,8 +5,8 @@
 
 <h2>Logements</h2>
 <p>
-    Si vous n'avez pas peur de la famille ARNAUD et souhaitez passer au moins 2 nuits à Guérande, sachez qu'une partie des invités sera logé en mobil-home au Domaine du Bréhadour 
-    et qu'une réduction sera peut-être possible si vous dîtes que vous êtes avec les ARNAUD.
+    Une partie des invités se logeront au Domaine de Bréhadour, il y a possibilité d'y avoir des places à moindres coûts si vous restez au moins 2 nuits, 
+    faîtes-nous signe ou dîtes au camping que vous êtes avec la famille ARNAUD.
 </p>
 <table id="logements">
     <tr>
