--- a/Mariage/Content/Site.css
+++ b/Mariage/Content/Site.css
@@ -147,6 +147,15 @@ section,
     margin: 0 auto;
     padding: 0;
 }
+figure, figcaption {
+    margin: 0;
+    padding: 0;
+    background-color: #5b2f20;
+    color: #ffeeee;
+}
+figcaption {
+    padding: 0 10px 5px;
+}
 #content {
     color: #311a0e;
     box-shadow: 3px 3px 3px #222;
@@ -196,7 +205,7 @@ textarea
 -----------------------------------------------------------*/
 .field-validation-error
 {
-    color: #ff0000;
+    color: #960000;
 }
 
 .field-validation-valid
@@ -207,14 +216,15 @@ textarea
 
 .input-validation-error
 {
-    border: 1px solid #ff0000;
+    border: 1px solid #960000;
     background-color: #ffeeee;
 }
 
 .validation-summary-errors
 {
-    font-weight: bold;
-    color: #ff0000;
+    color: #960000;
+    margin-left: 40px;
+    font-size: 0.8em;
 }
 
 .validation-summary-valid
@@ -248,7 +258,7 @@ nav li {
         zoom: 1;
     }
 #content p {
-    margin: 0 40px;
+    margin: 0 40px 10px;
 }
 h2, h3, h4 {
     font-family: "KingthingsCalligraphicaLight", serif;
@@ -264,9 +274,23 @@ h4 {
     font-size: 1.2em;
 }
 #slider {
-    width: 940px;
-    height: 705px;
-    margin: 0 auto;
+    width: 900px;
+    height: 430px;
+    margin: 0 auto 20px;
+}
+#slider-control {
+    position: relative;
+}
+#prevBtn {
+    position: absolute;
+    top: -250px;
+    left: 0;
+}
+#nextBtn {
+    position: absolute;
+    top: -250px;
+    left: 930px;
+    
 }
 
 iframe {
@@ -284,3 +308,28 @@ iframe {
     #private-form label {
         margin-right: 5px;
     }
+
+#logements {
+    border: 1px solid #5b2f20;
+    font-size: 0.75em;
+    border-collapse: collapse;
+    width: 920px;
+    margin: 20px auto;
+}
+#logements th {
+    background-color: #5b2f20;
+    color: #ffeeee;
+}
+#logements tr {
+        border: 1px solid #5b2f20;
+}
+#liste-illust {
+    margin: 40px auto;
+    width: 250px;
+}
+#not-found-list {
+    margin: 0 40px;
+}
+#not-found-list li {
+    list-style: circle;
+}
