--- a/Mariage/Views/Mariage/Logements.cshtml
+++ b/Mariage/Views/Mariage/Logements.cshtml
@@ -5,8 +5,8 @@
 
 <h2>Logements</h2>
 <p>
-    Une partie des invités se logeront au Domaine de Bréhadour, il y a possibilité d'y avoir des places à moindres coûts si vous restez au moins 2 nuits, 
-    faîtes-nous signe ou dîtes au camping que vous êtes avec la famille ARNAUD.
+    Une partie des invités se logeront au Domaine de Bréhadour, il y a possibilité d'y avoir des places à moindre coût si vous restez au moins 2 nuits, 
+    faites-nous signe ou dites au camping que vous êtes avec la famille ARNAUD.
 </p>
 <table id="logements">
     <tr>
