--- a/Mariage/Views/Mariage/Contact.cshtml
+++ b/Mariage/Views/Mariage/Contact.cshtml
@@ -22,5 +22,13 @@
 }
 @if (BaseModel.Private)
 {
+    <div id="contact-tel">
+    <p>Ou sinon vous pouvez aussi nous joindre par téléphone :
+    </p>
+    <ul><li>Perrine au 06 63 36 48 66</li>
+        <li>Gabriel au 06 64 56 96 77</li>
+
+    </ul>
+    </div>
     
 }
