--- a/Mariage/Views/Shared/_Layout.cshtml
+++ b/Mariage/Views/Shared/_Layout.cshtml
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/site.min.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.9.1.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-2.6.2.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/easySlider1.7.js")" type="text/javascript"></script>
+    <!--[if lt IE 9]>
+    <script src="~/Scripts/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
+    <script src="@Url.Content("~/Scripts/easyslider.min.js")" type="text/javascript"></script>
     <link rel="shortcut icon" href="@Url.Content("~/favicon.ico")" />
 </head>
-
     <body>
         <header>
             @if (!BaseModel.Private)
